<resources>
    <string name="app_name" translatable="false">UniTrackerMobile</string>
    <string name="pwd_title">Enter password to protect the app!</string>
    <string name="pwd_title_pwd">Enter Password</string>
    <string name="pwd_password1">Enter Password</string>
    <string name="pwd_password2">Confirm Password</string>
    <string name="pwd_submit">Confirm Entry</string>
    <string name="about">About the App</string>
    <string name="about_content">
        <![CDATA[
            <h1>UniTrackerMobile</h1>
            <h2>General Data</h2>
            <p>
                Version: %s<br/>
                License: GPL V3<br/>
                Website: https://unitrackermobile.de
            </p>
            <h2>Libraries</h2>
            <ul>
                <li>KSoap2</li>
                <li>OkHttp3</li>
                <li>AppAuth</li>
                <li>iTextG</li>
                <li>SQLCipher</li>
                <li>Android-FilePicker</li>
                <li>Spotlight</li>
                <li>MPAndroidChart</li>
                <li>Github-API</li>
            </ul>
            <h2>Copyright</h2>
            <p>
                UniTrackerMobile is free software: you can redistribute it and/or modify
                it under the terms of the GNU General Public License as published by
                the Free Software Foundation, either version 3 of the License, or
                (at your option) any later version.<br/><br/>

                UniTrackerMobile is distributed in the hope that it will be useful,
                but WITHOUT ANY WARRANTY; without even the implied warranty of
                MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
                GNU General Public License for more details.<br/><br/>

                You should have received a copy of the GNU General Public License
                along with UniTrackerMobile. If not, see <http://www.gnu.org/licenses/>.
            </p>
        ]]>
    </string>
    <string name="accounts">Accounts</string>
    <string name="accounts_cover" translatable="false">Cover</string>
    <string name="accounts_noAccount">No Account</string>
    <string name="accounts_add">Add Account</string>
    <string name="accounts_change">Change Account</string>
    <string name="accounts_tracker">Tracker</string>
    <string name="accounts_guest">Guest</string>
    <string name="accounts_auth">Authentication</string>
    <string name="accounts_server">Servername</string>
    <string name="accounts_user">Username</string>
    <string name="accounts_pwd">Password</string>
    <string name="accounts_api">API-Key</string>
    <string name="accounts_image_url">URL to Image</string>
    <string name="accounts_image_gallery">Gallery</string>
    <string name="accounts_github_server" translatable="false">https://api.github.com</string>
    <string name="accounts_pivotal_server" translatable="false">https://www.pivotaltracker.com</string>
    <string name="accounts_connection_successfully">Connection successfully!</string>
    <string name="accounts_connection_not_successfully">Connection not successfully!</string>
    <string name="accounts_youtrack_hub">Path to hub</string>
    <string name="accounts_github_client_secret">Client ID and Secret(separated by |)</string>
    <string name="projects">Projects</string>
    <string name="projects_user">Search for User or Organisation</string>
    <string name="projects_alias">Alias</string>
    <string name="projects_private">Private</string>
    <string name="projects_state">State</string>
    <string name="projects_sub">Sub Projects</string>
    <string name="projects_website">Website</string>
    <string name="projects_website_content" translatable="false">Website_Content</string>
    <string name="projects_icon_url">Icon-Url</string>
    <string name="projects_version">Version</string>
    <string name="projects_version_default">unspecified</string>
    <string name="projects_msg">"Do you really want to delete the project? There might still be bugs assigned to the project!  "</string>
    <string name="projects_msg_positive">Really delete!</string>
    <string-array name="project_state_mantis">
        <item>Development</item>
        <item>Release</item>
        <item>Stable</item>
        <item>Deprecated</item>
    </string-array>
    <string-array name="project_state_mantis_label">
        <item>Entwicklung</item>
        <item>Freigabe</item>
        <item>Stabil</item>
        <item>Veraltet</item>
    </string-array>
    <string name="versions">Versions</string>
    <string name="versions_released">Already published</string>
    <string name="versions_unReleased">Not released yet</string>
    <string name="versions_deprecated">Deprecated</string>
    <string name="versions_deprecated_redmine">Blocked</string>
    <string name="versions_releasedAt">Release Date</string>
    <string name="versions_filter">Filter</string>
    <string-array name="versions_filer">
        <item>@string/versions</item>
        <item>@string/versions_unReleased</item>
        <item>@string/versions_released</item>
    </string-array>
    <string name="versions_menu_changelog">Create Changelog as PDF</string>
    <string name="versions_menu_changelog_dir">Select directory to save Changelog!</string>
    <string name="versions_menu_changelog_no_selected">No Version selected!</string>
    <string name="versions_menu_changelog_created">Changelog was created successfully!</string>
    <string name="versions_menu_changelog_show">Show Changelog</string>
    <string name="versions_menu_roadmap_show">Show Roadmap</string>
    <string name="users">User</string>
    <string name="users_login">Login-Name</string>
    <string name="users_fullName">Name</string>
    <string name="users_email">Email</string>
    <string name="users_password">Password</string>
    <string name="users_password_repeat">Confirm password</string>
    <string name="fields">Fields</string>
    <string name="fields_type">Type</string>
    <string name="fields_default">Default-Values</string>
    <string name="fields_nullable">Null-Values</string>
    <string name="fields_possible_values">Possible Values (separated by |)</string>
    <string name="issues">Bug</string>
    <string name="issues_menu_use_default">Default Template</string>
    <string name="issues_menu_use_template">Use a Template</string>
    <string name="issues_menu_use_manage">Manage Template</string>
    <string name="issues_general">General</string>
    <string name="issues_custom">Userdefined</string>
    <string name="issues_general_summary">Summary</string>
    <string name="issues_general_category">Category</string>
    <string name="issues_general_version">Product Version</string>
    <string name="issues_general_targetVersion">Target Version</string>
    <string name="issues_general_tags">Tags</string>
    <string name="issues_general_fixedInVersion">Solved in Version</string>
    <string name="issues_general_submitted">Date Submitted</string>
    <string name="issues_general_lastUpdated">Last Updated</string>
    <string name="issues_general_dueDate">Due Date</string>
    <string name="issues_general_view">Visibility</string>
    <string name="issues_general_reproducibility">Reproducibility</string>
    <string name="issues_general_severity">Impact</string>
    <string name="issues_general_priority">Priority</string>
    <string name="issue_general_handler">Edited by</string>
    <string name="issues_general_status">State</string>
    <string name="issues_general_resolution">Solution</string>
    <string name="issues_general_platform">Platform</string>
    <string name="issues_general_os">OS</string>
    <string name="issues_general_build">Version</string>
    <string name="issues_context_clone">Clone Bug</string>
    <string name="issues_context_solve">Solve Bug</string>
    <string name="issues_context_attachment">Show Attachments</string>
    <string name="issues_context_attachment_overwrite">Should the file be overwritten?</string>
    <string name="issues_context_attachment_overwrite_yes">Yes</string>
    <string name="issues_context_attachment_overwrite_no">No</string>
    <string name="issues_context_attachment_saved">Attachment successfully saved!</string>
    <string name="issues_history_oldValue">old</string>
    <string name="issues_history_newValue">new</string>
    <string name="issues_history_field">Field</string>
    <string name="issues_history_time">Time</string>
    <string name="issues_history_user">User</string>
    <string name="settings_general">General Settings</string>
    <string name="settings_general_summary">"Change here the general settings of the app!  "</string>
    <string name="settings_cache_use">Use Cache</string>
    <string name="settings_cache_use_summary">Choose here whether to use the Cache or reload Data directly from Web.</string>
    <string name="settings_cache_reload">Reload after x Minutes</string>
    <string name="settings_cache_reload_summary">After how many Minutes should the data be reloaded by web?</string>
    <string name="settings_cache_reload_default">30</string>
    <string name="settings_cache_reload_pull_down">Reloading on pulling the List down</string>
    <string name="settings_cache_reload_pull_down_summery">Reloading from web on pulling the List down</string>
    <string name="settings_bug_tracker">Bug-Tracker</string>
    <string name="settings_bug_tracker_summary">Change the bug tracker specific settings here!</string>
    <string name="settings_internet">Internet</string>
    <string name="settings_internet_summary">Change here the settings, which concerns the synchronization with the webservice!</string>
    <string name="settings_internet_wlan_reload">"Automatically reload errors in the WLAN  "</string>
    <string name="settings_internet_wlan_reload_summary">Error Automatically reload every x seconds! (-1 to disable automatic reload) when connected to Wlan!</string>
    <string name="settings_internet_mobile_reload">Reload errors in the mobile network automatically</string>
    <string name="settings_internet_mobile_reload_summary">Error Automatically reload every x seconds! (-1 to disable automatic reload) when connected to mobile network!</string>
    <string name="settings_internet_mobile_block">Block the data exchange of the app in the mobile network</string>
    <string name="settings_internet_mobile_block_summary">Block the data exchange of the app when connected to mobile network!</string>
    <string name="settings_security">Security</string>
    <string name="settings_security_summary">Change the security settings of the app here!</string>
    <string name="settings_sync">synchronization</string>
    <string name="settings_sync_summary">Change the settings for local synchronization here!</string>
    <string name="settings_log">Log-File</string>
    <string name="settings_log_summary">Change the settings concerning the log file here.</string>
    <string name="settings_log_create_log_title">Create log file</string>
    <string name="settings_log_create_log_summary">Choose whether the app should create a log file or not!</string>
    <string name="settings_log_log_normal_title">Log messages</string>
    <string name="settings_log_log_normal_summary">"Select whether you also want to log normal messages and not just error messages!  "</string>
    <string name="settings_log_clear_title">Empty log file</string>
    <string name="settings_log_clear_summary">Activate the option to empty the log file!</string>
    <string name="administration">Administration</string>
    <string name="administration_menu">Across</string>
    <string name="filter">Filter</string>
    <string name="sys_add">Add</string>
    <string name="sys_edit">Edit</string>
    <string name="sys_delete">Delete</string>
    <string name="sys_cancel">Cancel</string>
    <string name="sys_save">Save</string>
    <string name="general_description">Description</string>
</resources>