<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C)  2019 Domjos
  ~ This file is part of UniTrackerMobile <https://github.com/domjos1994/UniTrackerMobile>.
  ~
  ~ UniTrackerMobile is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ UniBuggerMobile is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with UniTrackerMobile. If not, see <http://www.gnu.org/licenses/>.
  -->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="de.domjos.unitrackermobile.activities.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/settings_general"
        android:summary="@string/settings_general_summary" />

    <header
        android:fragment="de.domjos.unitrackermobile.activities.SettingsActivity$BugTrackerPreferenceFragment"
        android:icon="@drawable/ic_bug_report_black_24dp"
        android:title="@string/settings_bug_tracker"
        android:summary="@string/settings_bug_tracker_summary" />

    <header
        android:fragment="de.domjos.unitrackermobile.activities.SettingsActivity$InternetPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/settings_internet"
        android:summary="@string/settings_internet_summary" />

    <header
        android:fragment="de.domjos.unitrackermobile.activities.SettingsActivity$SecurityPreferenceFragment"
        android:icon="@drawable/ic_security_black_24dp"
        android:title="@string/settings_security"
        android:summary="@string/settings_security_summary" />

    <header
        android:fragment="de.domjos.unitrackermobile.activities.SettingsActivity$SyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/settings_sync"
        android:summary="@string/settings_sync_summary" />

    <header
        android:fragment="de.domjos.unitrackermobile.activities.SettingsActivity$LogPreferenceFragment"
        android:icon="@drawable/ic_error_black_24dp"
        android:title="@string/settings_log"
        android:summary="@string/settings_log_summary" />
</preference-headers>