<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C)  2019 Domjos
  ~ This file is part of UniTrackerMobile <https://github.com/domjos1994/UniTrackerMobile>.
  ~
  ~ UniTrackerMobile is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ UniBuggerMobile is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with UniTrackerMobile. If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Preference
        app:fragment="de.domjos.unitrackermobile.fragments.SettingsGeneralFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/settings_general"
        android:summary="@string/settings_general_summary" />

    <Preference
        app:fragment="de.domjos.unitrackermobile.fragments.SettingsBugTrackerFragment"
        android:icon="@drawable/ic_bug_report_black_24dp"
        android:title="@string/settings_bug_tracker"
        android:summary="@string/settings_bug_tracker_summary" />

    <Preference
        app:fragment="de.domjos.unitrackermobile.fragments.SettingsInternetFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/settings_internet"
        android:summary="@string/settings_internet_summary" />

    <Preference
        app:fragment="de.domjos.unitrackermobile.fragments.SettingsSecurityFragment"
        android:icon="@drawable/ic_security_black_24dp"
        android:title="@string/settings_security"
        android:summary="@string/settings_security_summary" />

    <Preference
        app:fragment="de.domjos.unitrackermobile.fragments.SettingsSyncFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/settings_sync"
        android:summary="@string/settings_sync_summary" />

    <Preference
        app:fragment="de.domjos.unitrackermobile.fragments.SettingsLogFragment"
        android:icon="@drawable/ic_error_black_24dp"
        android:title="@string/settings_log"
        android:summary="@string/settings_log_summary" />
</androidx.preference.PreferenceScreen>