<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C)  2019-2024 Domjos
  ~ This file is part of UniTrackerMobile <https://unitrackermobile.de/>.
  ~
  ~ UniTrackerMobile is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ UniTrackerMobile is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with UniTrackerMobile. If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:key="swtUseCache"
        android:defaultValue="false"
        android:title="@string/settings_cache_use"
        android:summary="@string/settings_cache_use_summary" />

    <EditTextPreference
        android:key="txtReload"
        android:defaultValue="@string/settings_cache_reload_default"
        android:digits="-10123456789"
        android:inputType="number"
        android:title="@string/settings_cache_reload"
        android:summary="@string/settings_cache_reload_summary" />

    <SwitchPreference
        android:key="swtReloadOnPullDown"
        android:defaultValue="true"
        android:title="@string/settings_cache_reload_pull_down"
        android:summary="@string/settings_cache_reload_pull_down_summery" />
</PreferenceScreen>