<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C)  2019 Domjos
  ~ This file is part of UniBuggerMobile <https://github.com/domjos1994/UniBuggerMobile>.
  ~
  ~ UniBuggerMobile is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ UniBuggerMobile is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with UniBuggerMobile. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/issues">
        <menu>
            <item
                android:id="@+id/navProjects"
                android:icon="@drawable/ic_apps_black_24dp"
                android:title="@string/projects" />
            <item
                android:id="@+id/navVersions"
                android:icon="@drawable/ic_update_black_24dp"
                android:title="@string/versions" />
            <item
                android:id="@+id/navUsers"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/users" />
            <item
                android:id="@+id/navFields"
                android:icon="@drawable/ic_text_fields_black_24dp"
                android:title="@string/fields" />
        </menu>
    </item>

    <item android:title="@string/administration_menu">
        <menu>
            <item
                android:id="@+id/navAdministration"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/administration" />
            <item
                android:id="@+id/navFilter"
                android:icon="@drawable/ic_filter_list_black_24dp"
                android:title="@string/filter" />
        </menu>
    </item>
</menu>
