<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C)  2019-2024 Domjos
  ~ This file is part of UniTrackerMobile <https://unitrackermobile.de/>.
  ~
  ~ UniTrackerMobile is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ UniTrackerMobile is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with UniTrackerMobile. If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:key="swtLogCreateLog"
        android:defaultValue="true"
        android:title="@string/settings_log_create_log_title"
        android:summary="@string/settings_log_create_log_summary" />

    <SwitchPreference
        android:key="swtLogNormalMessages"
        android:defaultValue="false"
        android:title="@string/settings_log_log_normal_title"
        android:summary="@string/settings_log_log_normal_summary" />

    <SwitchPreference
        android:key="swtLogClear"
        android:defaultValue="false"
        android:title="@string/settings_log_clear_title"
        android:summary="@string/settings_log_clear_summary" />
</PreferenceScreen>