<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C)  2019 Domjos
  ~ This file is part of UniTrackerMobile <https://github.com/domjos1994/UniTrackerMobile>.
  ~
  ~ UniTrackerMobile is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ UniBuggerMobile is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with UniTrackerMobile. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navAdd"
        android:title="@string/sys_add"
        android:icon="@drawable/ic_add_circle_black_24dp" />
    <item
        android:id="@+id/navEdit"
        android:title="@string/sys_edit"
        android:icon="@drawable/ic_edit_black_24dp" />
    <item
        android:id="@+id/navDelete"
        android:title="@string/sys_delete"
        android:icon="@drawable/ic_delete_black_24dp" />
    <item
        android:id="@+id/navCancel"
        android:title="@string/sys_cancel"
        android:icon="@drawable/ic_cancel_black_24dp" />
    <item
        android:id="@+id/navSave"
        android:title="@string/sys_save"
        android:icon="@drawable/ic_save_black_24dp" />

</menu>
