<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C)  2019-2024 Domjos
  ~ This file is part of UniTrackerMobile <https://unitrackermobile.de/>.
  ~
  ~ UniTrackerMobile is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ UniTrackerMobile is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with UniTrackerMobile. If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">

        <TableRow>

            <de.domjos.unitrackerlibrary.custom.SwipeRefreshDeleteList
                android:id="@+id/lvIssuesNote"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="250dp"
                app:itemIcon="@drawable/icon_issues_notes"
                app:listItemBackground="@drawable/background_controls_2"
                app:selectedListItemBackground="@drawable/background_selected"
                app:listItemDivider="@drawable/background_selected"
                app:listItemForeground="@android:color/black"/>
        </TableRow>

        <TableRow>

            <ImageButton
                android:id="@+id/cmdIssueNotesAdd"
                android:contentDescription="@string/sys_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:srcCompat="@drawable/icon_controls_add" />

            <ImageButton
                android:id="@+id/cmdIssueNotesEdit"
                android:contentDescription="@string/sys_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:srcCompat="@drawable/icon_controls_edit" />

            <ImageButton
                android:id="@+id/cmdIssueNotesDelete"
                android:contentDescription="@string/sys_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:srcCompat="@drawable/icon_controls_delete" />

            <ImageButton
                android:id="@+id/cmdIssueNotesCancel"
                android:contentDescription="@string/sys_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:srcCompat="@drawable/icon_controls_cancel" />

            <ImageButton
                android:id="@+id/cmdIssueNotesSave"
                android:contentDescription="@string/sys_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:srcCompat="@drawable/icon_controls_save" />
        </TableRow>

        <TableRow>

            <MultiAutoCompleteTextView
                android:id="@+id/txtIssueNotesContent"
                android:hint="@string/general_description"
                android:inputType="textMultiLine"
                android:layout_weight="10"
                android:layout_width="0dp"
                tools:ignore="Autofill" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txtIssueNotesSubmitDate"
                android:hint="@string/issues_general_submitted"
                android:layout_weight="5"
                android:layout_width="0dp"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/txtIssueNotesLastUpdated"
                android:hint="@string/issues_general_lastUpdated"
                android:layout_weight="5"
                android:layout_width="0dp"
                tools:ignore="Autofill" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:text="@string/issues_general_view" />

            <Spinner
                android:id="@+id/spIssueNotesView"
                android:layout_width="0dp"
                android:layout_weight="7" />
        </TableRow>
    </TableLayout>
</ScrollView>