<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C)  2019-2020 Domjos
  ~  This file is part of UniTrackerMobile <https://unitrackermobile.de/>.
  ~
  ~  UniTrackerMobile is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  UniTrackerMobile is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with UniTrackerMobile. If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.IssueGeneralFragment">

    <TableLayout
        android:id="@+id/tblHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">

        <TableRow
            tools:ignore="UselessParent">

            <TextView
                android:text="@string/issues_history_field"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="2" />

            <TextView
                android:text="@string/issues_history_user"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="2" />

            <TextView
                android:text="@string/issues_history_time"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="2" />

            <TextView
                android:text="@string/issues_history_oldValue"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="2" />

            <TextView
                android:text="@string/issues_history_newValue"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="2" />
        </TableRow>
    </TableLayout>
</ScrollView>